# arbitrage_trading_rust_bot

./: .gitignore  Cargo.toml  README.md
src/: binance.rs  bybit.rs  coin_tickers.rs  ftx.rs  funding_rates.rs  main.rs  okex.rs  order_entry.rs  output.rs  settings.rs  strategy.rs
